--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^0.0.46",
     "@ai-sdk/openai": "^0.0.55",
+    "@google/generative-ai": "^0.17.1",
     "ai": "^3.3.26",
     "mongodb": "^6.8.0",
     "next": "14.2.8",
