--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/openai": "^0.0.55",
     "@google/generative-ai": "^0.17.1",
     "ai": "^3.3.26",
+    "groq-sdk": "^0.7.0",
     "mongodb": "^6.8.0",
     "next": "14.2.8",
     "react": "^18",
