--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@ai-sdk/google": "^0.0.46",
     "@ai-sdk/openai": "^0.0.55",
     "@google/generative-ai": "^0.17.1",
+    "@xenova/transformers": "^2.17.2",
     "ai": "^3.3.26",
     "groq-sdk": "^0.7.0",
     "mongodb": "^6.8.0",
     "next": "14.2.8",
+    "ollama": "^0.5.8",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
