--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "dependencies": {
     "@ai-sdk/google": "^0.0.46",
     "@ai-sdk/openai": "^0.0.55",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.14",
     "@google/generative-ai": "^0.17.1",
+    "@mui/icons-material": "^6.0.2",
+    "@mui/material": "^6.0.2",
     "@xenova/transformers": "^2.17.2",
     "ai": "^3.3.26",
+    "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "groq-sdk": "^0.7.0",
     "mongodb": "^6.8.0",
     "next": "14.2.8",
     "ollama": "^0.5.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-textarea-autosize": "^8.5.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -28,6 +36,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
+    "sass": "^1.78.0",
     "typescript": "^5"
   }
 }
